crates/carta/tests/snapshots/golden_writer__beamer__common__footnote-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
ref\footnote<\value{beamerpauses}->[frame]{the note body}
\end{frame}
