crates/carta/tests/snapshots/golden_writer__beamer__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
x\footnote<\value{beamerpauses}->[frame]{first}
y\footnote<\value{beamerpauses}->[frame]{second}
\end{frame}
