crates/carta/tests/snapshots/golden_writer__beamer__common__header-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\section{Titled}\label{anchor}
