crates/carta/tests/snapshots/golden_writer__beamer__common__header-unnumbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\section*{Hidden}\label{hidden}
\addcontentsline{toc}{section}{Hidden}
