crates/carta/tests/snapshots/golden_writer__beamer__common__headers.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\section{One}\label{one}

\subsection{Two}\label{two}

\begin{frame}{Six}
\protect\phantomsection\label{six}
\end{frame}
