crates/carta/tests/snapshots/golden_writer__beamer__common__horizontal-rule.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
above
\end{frame}

\begin{frame}
below
\end{frame}
