crates/carta/tests/snapshots/golden_writer__beamer__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\pandocbounded{\includegraphics[keepaspectratio,alt={alt}]{https://example.org/i.png}}
\end{frame}
