crates/carta/tests/snapshots/golden_writer__beamer__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
an
\pandocbounded{\includegraphics[keepaspectratio,alt={alt words}]{pic.png}}
inline
\end{frame}
