crates/carta/tests/snapshots/golden_writer__beamer__common__inline-code-backtick.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
use \texttt{a\ \textasciigrave{}b\textasciigrave{}\ c} here
\end{frame}
