crates/carta/tests/snapshots/golden_writer__beamer__common__inline-code-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
before
\texttt{a\ \&\ b\ \textasciitilde{}\ c\ \textbackslash{}\ d\ \%\ e\ \#\ f\ \$\ g\ \_\ h\ \{\ i\ \}\ j\ \^{}\ k\ \textbar{}\ l\ \textless{}\ m\ \textgreater{}\ n}
after
\end{frame}
