crates/carta/tests/snapshots/golden_writer__beamer__common__inline-code.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
a \texttt{let\ x\ =\ 1;} b
\end{frame}
